--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev.finance$</title>
-    <link rel="stylesheet" href="/assets/CSS/style.css">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 <body>
 
@@ -116,6 +116,6 @@
 
     <footer><p>dev.finance$</p></footer>
 
-    <script src="/assets/JS/index.js"></script>
+    <script src="./assets/JS/index.js"></script>
 </body>
 </html>
